# analise_exploratoria_youtube

./: README.md  desafio_youtube.ipynb  pyproject.toml
